<resources>
  <string name="app_name">My Application</string>
  <string name="racer_name_hint">racer_name</string>
  <string name="total_points_hint">Total Points</string>
  <string name="add_racer">Add Racer</string>
  <string name="round_number">Rounds Number</string>
  <string name="racers">Racers</string>
  <string name="submit">Submit</string>
  <string name="cars">Cars</string>
  <string name="add_car">Add New Car</string>
  <string name="races">Races</string>
  <string name="rounds">Rounds</string>
  <string name="search_racers">Search Racer</string>
  <string name="no_racers_added">No Racers added</string>
  <string name="search_cars">Search Cars</string>
  <string name="no_cars_added">No Cars Added</string>
</resources>