<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp">

  <TextView
    android:id="@+id/roundLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/round_number"
    app:layout_constraintBottom_toBottomOf="@+id/roundSpinner"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/roundSpinner" />

  <Spinner
    android:id="@+id/roundSpinner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/roundLabel"
    app:layout_constraintEnd_toEndOf="parent" />

  <TextView
    android:id="@+id/racersLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cars"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/roundSpinner"
    app:layout_constraintStart_toStartOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/carsRecyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@id/racersLabel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/addCarButton" />

  <Button
    android:id="@+id/addCarButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_car"
    app:layout_constraintBottom_toTopOf="@+id/submitButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/carsRecyclerView" />
  <Button
    android:id="@+id/submitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>