<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/nameInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/racer_name_hint"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/nameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPersonName" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/pointsInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/total_points_hint"
    app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/pointsEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="number" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/addButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_racer"
    app:layout_constraintTop_toBottomOf="@id/pointsInputLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>