<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  android:padding="16dp">

  <EditText
    android:id="@+id/searchEditText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/search_racers"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
    android:id="@+id/addRacerButton"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:background="@android:color/transparent"
    android:contentDescription="@string/add_racer"
    android:src="@drawable/add_racer"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
   />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/racersRecyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintTop_toBottomOf="@id/searchEditText"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />

  <ProgressBar
    android:layout_width="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/loadingPb"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_height="wrap_content" />
  <TextView
    android:layout_width="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:visibility="gone"
    android:text="@string/no_racers_added"
    android:id="@+id/emptyText"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>